# LLM-Finetuner

./: .gitignore  README.md  config.biblioteca.seed_only.yaml  config.biblioteca.synthetic.yaml  config.biblioteca.synthetic_aggressive.yaml  config.biblioteca.yaml  config.seed_only.yaml  config.synthetic.yaml  config.synthetic_aggressive.yaml  config.yaml  evaluate_fine_tuning.py  experiment.py  fine_tune.py  main.py  pyproject.toml
data/eval/: biblioteca_robusto.jsonl  suporte_tecnico_preliminar_diverso.jsonl  suporte_tecnico_robusto.jsonl
data/seeds/: biblioteca.json  biblioteca_experimento.json  suporte_tecnico.json  suporte_tecnico_experimento.json
domains/biblioteca/: tools.json
domains/suporte_tecnico/: tools.json
src/core/: config.py  llm_client.py  models.py  orchestrator.py  tool_registry.py
src/curation/: llm_judge.py
src/export/: jsonl_exporter.py
src/formatting/: chat_formatter.py
src/generation/: llm_generator.py
src/ingestion/: seed_loader.py
src/preprocessing/: cleaner.py
src/validation/: evaluator.py  schema_validator.py
tests/: test_generation_curation.py  test_llm_client.py  test_pipeline.py  test_preprocessing.py  test_tool_registry.py  test_validation.py
