[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-ft-pipeline"
version = "0.2.0"
description = "Pipeline reprodutível de preparação de datasets para fine-tuning"
requires-python = ">=3.11"
dependencies = [
  "pydantic[email]>=2.10,<3",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10"]
training = [
  "transformers>=4.51",
  "datasets>=3.5",
  "peft>=0.15",
  "trl>=0.16",
  "accelerate>=1.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["src*"]
